<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/refresh"
            android:title="@string/action_refresh"
            android:icon="@drawable/ic_light_off"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/add_macro_button"
            android:title="@string/action_add_macro"
            android:icon="@drawable/blank_command_icon"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/delete_button"
            android:title="@string/action_delete"
            android:icon="@drawable/delete_icon"
            app:showAsAction="ifRoom"/>

</menu>