<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity"
             android:background="@drawable/background_gradient">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/presets_recycler_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:clipToPadding="false"
            android:scrollbars="none"/>

    <TextView
            android:id="@+id/linear_layout_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_view_create_preset_or_macro"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/montserrat_light"
            android:layout_marginBottom="18dp"/>
</FrameLayout>